--- a/src/index.css
+++ b/src/index.css
@@ -15,17 +15,20 @@ body,
 }
 
 .enterName_wrapper {
+  z-index: 1000;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #f5f5f5;
+  height: 100%;
 }
 
 .enterName {
-  width: 400px;
-  height: 400px;
-  background-color: #fff;
+  width: 100%;
+  height: 350px;
+  max-width: 400px;
+  margin: 0 24px;
+  background-color: #f5f5f5;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -63,4 +66,46 @@ body,
 
 .enterName button:hover {
   background-color: #ccc;
+}
+
+.mapSubmit {
+  position: absolute;
+  z-index: 1000;
+  bottom: 24px;
+  width: calc(100% - 24px - 24px);
+  margin: 0 24px;
+  height: 50px;
+  background-color: #4caf50;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border: none;
+  color: white;
+  font-size: 18px;
+  text-transform: uppercase;
+  outline: none;
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.map svg {
+  /* display: none !important; */
+}
+
+.enterName_bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.enterName_bg svg {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
