--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
 }
 html,
 body,
@@ -106,19 +107,19 @@ body,
 }
 
 .adminPanel {
+  height: 100%;
   display: grid;
+  padding: 10px;
+  gap: 10px;
   grid-template-columns: 400px 1fr;
-  grid-template-rows: 1fr 100px;
-  grid-template-areas:
-    "players question"
-    "players controls";
+  grid-template-areas: "players question";
   .players {
+    height: 100%;
     grid-area: players;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
     padding: 10px;
-    margin: 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     .playersTitle {
@@ -183,12 +184,55 @@ body,
     height: 100%;
     grid-area: question;
     display: flex;
+    justify-content: space-evenly;
     flex-direction: column;
     overflow-y: auto;
-    padding: 10px;
-    margin: 10px;
+    padding: 20px 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-left: 0;
+    .question__header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .question__title {
+        width: 100%;
+        text-align: center;
+        font-size: 40px;
+        font-weight: 500;
+      }
+    }
+    .question__body {
+      display: flex;
+      height: 80vh;
+      .question__img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+    .question__footer {
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      .question__btn {
+        height: 50px;
+        width: 200px;
+        background-color: #f0ae45;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        border: none;
+        color: white;
+        font-size: 18px;
+        text-transform: uppercase;
+        outline: none;
+        &:disabled {
+          background-color: #041220;
+          cursor: not-allowed;
+        }
+      }
+    }
   }
 }
