--- a/src/index.scss
+++ b/src/index.scss
@@ -107,15 +107,16 @@ body,
 }
 
 .adminPanel {
+  background-color: #001220;
   height: 100%;
   display: grid;
   padding: 10px;
   gap: 10px;
   grid-template-columns: 400px 1fr;
-  grid-template-areas: "players question";
+  $block-bg-color: #eee;
   .players {
+    background-color: $block-bg-color;
     height: 100%;
-    grid-area: players;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
@@ -179,10 +180,34 @@ body,
       display: inline-block;
       margin-right: 10px;
     }
+    .showLeaderboard {
+      margin-top: 10px;
+      cursor: pointer;
+      text-transform: uppercase;
+      font-size: 16px;
+      background-color: #4caf50;
+      color: white;
+      height: 40px;
+      border-radius: 5px;
+      transition: all 0.3s ease;
+      border: none;
+    }
+    .hideScores {
+      margin-top: auto;
+      cursor: pointer;
+      text-transform: uppercase;
+      font-size: 16px;
+      border: none;
+      color: #fff;
+      background-color: #388dcd;
+      height: 40px;
+      border-radius: 5px;
+      transition: all 0.3s ease;
+    }
   }
   .question {
+    background-color: $block-bg-color;
     height: 100%;
-    grid-area: question;
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
@@ -232,6 +257,63 @@ body,
           background-color: #041220;
           cursor: not-allowed;
         }
+      }
+    }
+  }
+  .leaderboard {
+    background-color: $block-bg-color;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    gap: 10px;
+    margin-bottom: 100px;
+    .leaderboardTitle {
+      font-size: 32px;
+      text-align: center;
+      font-weight: 500;
+      margin-bottom: 10px;
+    }
+    .player {
+      width: 600px;
+      height: 46px;
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      border-bottom: 1px solid #ccc;
+      border-radius: 8px;
+      .playerName {
+        flex: 1;
+        text-transform: capitalize;
+        font-size: 24px;
+        font-weight: 500;
+        font-weight: bold;
+        span {
+          font-weight: normal;
+        }
+      }
+      .playerScore {
+        margin-right: 10px;
+      }
+      &:nth-of-type(1) {
+        background-color: #fbae3c;
+      }
+      &:nth-of-type(2) {
+        background-color: #e1685e;
+        color: #fff;
+      }
+      &:nth-of-type(3) {
+        background-color: #3d3056;
+        color: #fff;
+      }
+      &:last-child {
+        // display: none;
       }
     }
   }
