fix ios stylingm remove comments, update viewport

--- a/src/index.scss
+++ b/src/index.scss
@@ -57,6 +57,7 @@ body,
       margin-bottom: 20px;
       outline: none;
       background-color: #fff;
+      color: #000;
       cursor: pointer;
       &:hover {
         background-color: #ccc;
