--- a/src/index.scss
+++ b/src/index.scss
@@ -115,6 +115,56 @@ body,
   position: relative;
 }
 
+.scoresPopup {
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 24px;
+  right: 50%;
+  transform: translateX(50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1000;
+  gap: 10px;
+  .header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    h2 {
+      flex: 1;
+      text-align: center;
+      font-size: 18px;
+      font-weight: 500;
+      background-color: #2196f3;
+      color: white;
+      padding: 10px;
+      border-radius: 8px;
+    }
+    .scoreIncrease {
+      font-size: 18px;
+      font-weight: 500;
+      background-color: #4caf50;
+      color: white;
+      padding: 10px;
+      border-radius: 8px;
+    }
+  }
+  .totalScore {
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    background-color: #2196f3;
+    color: white;
+    padding: 10px;
+    border-radius: 8px;
+  }
+}
+
 .adminPanel {
   background-color: #001220;
   height: 100%;
