--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,13 @@ body,
   height: 100%;
 }
 
+%glassmorphism {
+  background-color: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+}
+
 .enterName_wrapper {
   z-index: 1000;
   position: relative;
@@ -21,6 +28,7 @@ body,
   height: 100%;
 
   .enterName {
+    @extend %glassmorphism;
     width: 100%;
     height: 350px;
     max-width: 400px;
@@ -94,8 +102,9 @@ body,
   width: calc(100% - 24px - 24px);
   margin: 0 24px;
   height: 50px;
-  background-color: #4caf50;
-  border-radius: 5px;
+  @extend %glassmorphism;
+  background-color: #4caf4fd9;
+  border-radius: 8px;
   cursor: pointer;
   transition: all 0.3s ease;
   border: none;
@@ -104,7 +113,10 @@ body,
   text-transform: uppercase;
   outline: none;
   &:disabled {
-    background-color: #041220;
+    @extend %glassmorphism;
+    background-color: rgba(255, 255, 255, 0.2);
+    // backdrop-filter: blur(10px);
+    color: #333333;
     cursor: not-allowed;
   }
 }
@@ -115,15 +127,17 @@ body,
   position: relative;
 }
 
+.scoresPopupWrapper {
+  display: flex;
+  justify-content: center;
+  margin: 0 24px;
+}
 .scoresPopup {
-  background-color: #fff;
-  border-radius: 8px;
+  // glassmorphism
+  @extend %glassmorphism;
   padding: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: absolute;
   top: 24px;
-  right: 50%;
-  transform: translateX(50%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -387,4 +401,14 @@ body,
     background-color: #eee;
     border-radius: 10px;
   }
+}
+
+.leaflet-control-zoom {
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37) !important;
+  border: 1px solid rgba(255, 255, 255, 0.18) !important;
+}
+.leaflet-control-zoom-in,
+.leaflet-control-zoom-out {
+  background-color: rgba(255, 255, 255, 0.2) !important;
+  backdrop-filter: blur(10px) !important;
 }
