--- a/src/index.scss
+++ b/src/index.scss
@@ -412,3 +412,6 @@ body,
   background-color: rgba(255, 255, 255, 0.2) !important;
   backdrop-filter: blur(10px) !important;
 }
+.leaflet-control-attribution svg {
+  display: none !important;
+}
