--- a/src/styles/adminPage.scss
+++ b/src/styles/adminPage.scss
@@ -1,184 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Montserrat", sans-serif;
-  box-sizing: border-box;
-}
-html,
-body,
-#root {
-  height: 100%;
-}
-
-%glassmorphism {
-  background-color: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(10px);
-  border-radius: 10px;
-}
-
-.enterName_wrapper {
-  z-index: 1000;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-
-  .enterName {
-    @extend %glassmorphism;
-    width: 100%;
-    height: 350px;
-    max-width: 400px;
-    margin: 0 24px;
-    background-color: #f5f5f5;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    h1 {
-      font-size: 30px;
-      font-weight: 500;
-      margin-bottom: 20px;
-    }
-    label {
-      user-select: none;
-      font-size: 14px;
-    }
-    input {
-      height: 40px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      padding: 0 10px;
-      margin-bottom: 10px;
-      outline: none;
-      &:last-of-type {
-        margin-bottom: 20px;
-      }
-      &:disabled {
-        background-color: #ccc;
-        color: #282828;
-      }
-    }
-    button {
-      height: 40px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      padding: 0 10px;
-      margin-bottom: 20px;
-      outline: none;
-      background-color: #fff;
-      color: #000;
-      cursor: pointer;
-      &:hover {
-        background-color: #ccc;
-      }
-    }
-  }
-}
-
-.enterName_bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  svg {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.mapSubmit {
-  position: absolute;
-  z-index: 1000;
-  bottom: 24px;
-  width: calc(100% - 24px - 24px);
-  margin: 0 24px;
-  height: 50px;
-  @extend %glassmorphism;
-  background-color: #4caf4fd9;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  border: none;
-  color: white;
-  font-size: 18px;
-  text-transform: uppercase;
-  outline: none;
-  &:disabled {
-    @extend %glassmorphism;
-    background-color: rgba(255, 255, 255, 0.2);
-    // backdrop-filter: blur(10px);
-    color: #333333;
-    cursor: not-allowed;
-  }
-}
-
-.map {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.scoresPopupWrapper {
-  display: flex;
-  justify-content: center;
-  margin: 0 24px;
-}
-.scoresPopup {
-  // glassmorphism
-  @extend %glassmorphism;
-  padding: 10px;
-  position: absolute;
-  top: 24px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 1000;
-  gap: 10px;
-  .header {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    width: 100%;
-    h2 {
-      flex: 1;
-      text-align: center;
-      font-size: 18px;
-      font-weight: 500;
-      background-color: #2196f3;
-      color: white;
-      padding: 10px;
-      border-radius: 8px;
-    }
-    .scoreIncrease {
-      font-size: 18px;
-      font-weight: 500;
-      background-color: #4caf50;
-      color: white;
-      padding: 10px;
-      border-radius: 8px;
-    }
-  }
-  .totalScore {
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 500;
-    background-color: #2196f3;
-    color: white;
-    padding: 10px;
-    border-radius: 8px;
-  }
-}
-
 .adminPanel {
   background-color: #001220;
   height: 100%;
@@ -203,20 +22,24 @@ body,
     }
 
     .player {
-      height: 46px;
+      min-height: 48px;
       box-sizing: border-box;
       display: flex;
       align-items: center;
       padding: 10px;
       border-bottom: 1px solid #ccc;
       .playerName {
+        word-wrap: break-word;
+        overflow: hidden;
         flex: 1;
         text-transform: capitalize;
         font-size: 18px;
         font-weight: 500;
+        margin-right: 5px;
       }
       .playerScore {
         margin-right: 10px;
+        margin-left: auto;
       }
       .playerDelete {
         display: none;
@@ -401,17 +224,4 @@ body,
     background-color: #eee;
     border-radius: 10px;
   }
-}
-
-.leaflet-control-zoom {
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37) !important;
-  border: 1px solid rgba(255, 255, 255, 0.18) !important;
-}
-.leaflet-control-zoom-in,
-.leaflet-control-zoom-out {
-  background-color: rgba(255, 255, 255, 0.2) !important;
-  backdrop-filter: blur(10px) !important;
-}
-.leaflet-control-attribution svg {
-  display: none !important;
 }
