--- a/src/pages/AdminPanel/adminPage.scss
+++ b/src/pages/AdminPanel/adminPage.scss
@@ -64,7 +64,7 @@
       width: 10px;
       height: 10px;
       border-radius: 50%;
-      background-color: green;
+      background-color: #4caf50;
       display: inline-block;
       margin-right: 10px;
     }
