--- a/src/pages/AdminPanel/adminPage.scss
+++ b/src/pages/AdminPanel/adminPage.scss
@@ -1,33 +1,57 @@
 .adminPanel {
-  background-color: #001220;
+  // background-color: #001220;
+  background-color: #fff;
   height: 100%;
   display: grid;
   padding: 10px;
   gap: 10px;
   grid-template-columns: 400px 1fr;
-  $block-bg-color: #eee;
+  $block-bg-color: #fff;
+  $block-box-shadow: none; // 0 0 10px rgba(0, 0, 0, 0.1);
   .players {
-    background-color: $block-bg-color;
+    // background-color: $block-bg-color;
+    background-color: #e9e9e9;
+    border: 1px solid #0000000f;
+    border-radius: 10px;
+    color: #4f5561;
     height: 100%;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
     padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: $block-box-shadow;
+    gap: 10px;
     .playersTitle {
-      font-size: 20px;
-      font-weight: 500;
-      margin-bottom: 10px;
+      color: #2196f3;
+      display: flex;
+      align-items: baseline;
+      margin: 10px;
+      font-size: 24px;
+      font-weight: bold;
+      .hideScores {
+        color: #4f5561;
+        margin-left: auto;
+        border: none;
+        font-size: 16px;
+        background-color: transparent;
+        text-decoration: underline;
+        cursor: pointer;
+        outline: none;
+        &:hover {
+          text-decoration: none;
+        }
+      }
     }
 
     .player {
+      background-color: #fff;
+      color: #000;
+      border-radius: 8px;
       min-height: 48px;
       box-sizing: border-box;
       display: flex;
       align-items: center;
       padding: 10px;
-      border-bottom: 1px solid #ccc;
       .playerName {
         word-wrap: break-word;
         overflow: hidden;
@@ -56,9 +80,6 @@
           display: block;
         }
       }
-      &:last-child {
-        border-bottom: none;
-      }
     }
     .greenCircle {
       width: 10px;
@@ -76,46 +97,62 @@
       display: inline-block;
       margin-right: 10px;
     }
-    .mainButton {
-      margin-top: 10px;
-      cursor: pointer;
-      text-transform: uppercase;
-      font-size: 16px;
-      background-color: #4caf50;
-      color: white;
-      height: 40px;
-      border-radius: 5px;
-      transition: all 0.3s ease;
-      border: none;
+  }
+  .quizView {
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    .nav {
+      display: flex;
+      width: fit-content;
+      padding: 5px;
+      background-color: #e9e9e9;
+      border: 1px solid #0000000f;
+      border-radius: 10px;
+      gap: 5px;
+      .navButton {
+        background-color: transparent;
+        cursor: pointer;
+        border-radius: 8px;
+        font-weight: bold;
+        font-size: 16px;
+        color: #4f5561;
+        border: none;
+        padding: 10px 20px;
+        transition: all 0.15s ease-out;
+        &:hover {
+          background-color: #fff;
+        }
+        &.active {
+          color: #2196f3;
+          background-color: #fff;
+        }
+      }
     }
-    .hideScores {
-      margin-top: auto;
-      cursor: pointer;
-      text-transform: uppercase;
-      font-size: 16px;
-      border: none;
-      color: #fff;
-      background-color: #388dcd;
-      height: 40px;
-      border-radius: 5px;
-      transition: all 0.3s ease;
+    .body {
+      flex: 1;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+      .map {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
   .question {
     background-color: $block-bg-color;
     height: 100%;
     display: flex;
-    justify-content: space-evenly;
     flex-direction: column;
     overflow-y: auto;
-    padding: 20px 10px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-left: 0;
+    box-shadow: $block-box-shadow;
     .question__header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      margin-top: 20px;
+      margin-bottom: auto;
       .question__title {
         width: 100%;
         text-align: center;
@@ -126,14 +163,20 @@
     .question__body {
       display: flex;
       height: 80vh;
+      align-items: center;
       .question__img {
+        margin: 0 auto;
         display: block;
-        width: 100%;
-        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        height: fit-content;
         object-fit: contain;
+        border-radius: 10px;
+        overflow: hidden;
       }
     }
     .question__footer {
+      margin-top: auto;
       display: flex;
       justify-content: center;
       gap: 25px;
@@ -162,17 +205,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     overflow-y: auto;
     padding: 10px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: $block-box-shadow;
     gap: 10px;
     margin-bottom: 100px;
     .leaderboardTitle {
+      margin-top: 20px;
+      color: #4f5561;
       font-size: 32px;
       text-align: center;
-      font-weight: 500;
+      font-weight: bold;
       margin-bottom: 10px;
     }
     .player {
@@ -221,7 +265,11 @@
     align-items: center;
     flex-direction: column;
     gap: 24px;
-    background-color: #eee;
+    background-color: $block-bg-color;
+    border-radius: 10px;
+    color: #4f5561;
+  }
+  .map {
     border-radius: 10px;
   }
 }
