--- a/src/pages/AdminPanel/adminPage.scss
+++ b/src/pages/AdminPanel/adminPage.scss
@@ -20,12 +20,12 @@
     overflow-y: auto;
     padding: 10px;
     box-shadow: $block-box-shadow;
-    gap: 10px;
+    gap: 5px;
     .playersTitle {
-      color: #2196f3;
       display: flex;
-      align-items: baseline;
-      margin: 10px;
+      align-items: center;
+      margin: 8px 10px;
+      margin-bottom: 9px;
       font-size: 24px;
       font-weight: bold;
       .hideScores {
@@ -45,13 +45,13 @@
 
     .player {
       background-color: #fff;
-      color: #000;
-      border-radius: 8px;
+      color: #4f5561;
+      border-radius: 6px;
       min-height: 48px;
       box-sizing: border-box;
       display: flex;
       align-items: center;
-      padding: 10px;
+      overflow: hidden;
       .playerName {
         word-wrap: break-word;
         overflow: hidden;
@@ -65,6 +65,28 @@
         margin-right: 10px;
         margin-left: auto;
       }
+      .status {
+        margin-right: 8px;
+        // circle
+        margin-left: 10px;
+        height: 10px;
+        width: 10px;
+        border-radius: 50%;
+
+        // line
+        // width: 6px;
+        // height: 100%;
+
+        &.yellow {
+          background-color: #ffde00;
+        }
+        &.green {
+          background-color: #00de09;
+        }
+        &.red {
+          background-color: #ff4545;
+        }
+      }
       .playerDelete {
         display: none;
         cursor: pointer;
@@ -74,28 +96,13 @@
         border-radius: 5px;
         transition: all 0.3s ease;
         border: none;
+        margin-right: 10px;
       }
       &:hover {
         .playerDelete {
           display: block;
         }
       }
-    }
-    .greenCircle {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background-color: #4caf50;
-      display: inline-block;
-      margin-right: 10px;
-    }
-    .redCircle {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background-color: red;
-      display: inline-block;
-      margin-right: 10px;
     }
   }
   .quizView {
@@ -137,6 +144,7 @@
       width: 100%;
       overflow: hidden;
       .map {
+        border: 1px solid #0000000f;
         width: 100%;
         height: 100%;
       }
@@ -162,7 +170,7 @@
     }
     .question__body {
       display: flex;
-      height: 80vh;
+      max-height: 80vh;
       align-items: center;
       .question__img {
         margin: 0 auto;
