--- a/src/pages/AdminPanel/adminPage.scss
+++ b/src/pages/AdminPanel/adminPage.scss
@@ -11,7 +11,7 @@
   .players {
     // background-color: $block-bg-color;
     background-color: #e9e9e9;
-    border: 1px solid #0000000f;
+    border: 1px solid #ccc;
     border-radius: 10px;
     color: #4f5561;
     height: 100%;
@@ -23,13 +23,15 @@
     gap: 5px;
     .playersTitle {
       display: flex;
-      align-items: center;
-      margin: 8px 10px;
-      margin-bottom: 9px;
+      padding-bottom: 8px;
+      align-items: end;
+      margin: 0 8px;
+      height: 45px;
       font-size: 24px;
       font-weight: bold;
       .hideScores {
-        color: #4f5561;
+        height: min-content;
+        color: #2196f3;
         margin-left: auto;
         border: none;
         font-size: 16px;
@@ -52,6 +54,7 @@
       display: flex;
       align-items: center;
       overflow: hidden;
+      border: 1px solid #ccc;
       .playerName {
         word-wrap: break-word;
         overflow: hidden;
@@ -68,14 +71,14 @@
       .status {
         margin-right: 8px;
         // circle
-        margin-left: 10px;
-        height: 10px;
-        width: 10px;
-        border-radius: 50%;
+        // margin-left: 10px;
+        // height: 10px;
+        // width: 10px;
+        // border-radius: 50%;
 
         // line
-        // width: 6px;
-        // height: 100%;
+        width: 6px;
+        height: 100%;
 
         &.yellow {
           background-color: #ffde00;
@@ -116,7 +119,7 @@
       width: fit-content;
       padding: 5px;
       background-color: #e9e9e9;
-      border: 1px solid #0000000f;
+      border: 1px solid #ccc;
       border-radius: 10px;
       gap: 5px;
       .navButton {
