--- a/src/pages/AdminPage/adminPage.scss
+++ b/src/pages/AdminPage/adminPage.scss
@@ -1,13 +1,12 @@
 $block-bg-color: #fff;
 $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 %adminSection {
-  background-color: #e9e9e9;
-  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.06);
   border-radius: 10px;
   color: #4f5561;
-  box-shadow: $block-box-shadow;
-  background-color: rgba(255, 255, 255, 0.8);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  background-color: rgba(245, 245, 245, 0.8);
+  // background-color: #fff;
+  // box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
 }
 
@@ -21,8 +20,7 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  // background-color: #001220;
-  // background-color: #fff;
+  background-color: #fff;
   height: 100%;
   display: grid;
   padding: 10px;
@@ -37,6 +35,7 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 10px;
     gap: 5px;
     .playersTitle {
+      color: #2196f3;
       display: flex;
       padding-bottom: 8px;
       align-items: end;
@@ -49,13 +48,12 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         border: none;
         outline: none;
         border-radius: 6px;
-        color: #000;
+        color: #4f5561;
         padding: 5px 10px;
         text-align: center;
         font-size: 40px;
         font-weight: 500;
         height: min-content;
-        color: #2196f3;
         margin-left: auto;
         font-size: 16px;
         text-decoration: underline;
@@ -77,7 +75,7 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
     .player {
       background-color: #fff;
-      color: #4f5561;
+      color: #000;
       border-radius: 6px;
       min-height: 48px;
       box-sizing: border-box;
@@ -166,12 +164,12 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     grid-template-rows: auto 1fr;
     gap: 10px;
     flex-direction: column;
-    overflow: hidden;
     width: 100%;
     height: 100%;
     .nav {
       @extend %adminSection;
-      margin: 0 auto;
+      // background-color: #e9e9e9;
+      backdrop-filter: none;
       display: flex;
       width: fit-content;
       padding: 5px;
@@ -201,7 +199,6 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       flex: 1;
       height: 100%;
       width: 100%;
-      overflow: hidden;
       .map {
         border: 1px solid #ccc;
         width: 100%;
@@ -210,13 +207,12 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
   }
   .question {
-    @extend %adminSection;
+    // @extend %adminSection;
     display: grid;
     grid-template-rows: auto 1fr auto;
     height: 100%;
     width: 100%;
     border-radius: 10px;
-    box-shadow: $block-box-shadow;
     padding: 10px;
     .question__header {
       display: flex;
@@ -234,9 +230,10 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       align-items: center;
       height: 100%;
       .question__img {
-        border: 5px solid #fff;
+        object-fit: contain;
         max-width: 100%;
-        height: 78vh;
+        width: 100%;
+        max-height: 78vh;
         margin: auto;
         border-radius: 10px;
       }
@@ -258,7 +255,11 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         transition: all 0.3s ease;
         font-size: 16px;
         text-transform: capitalize;
+        &:hover {
+          background-color: #eee;
+        }
         &:disabled {
+          background-color: #fff;
           color: #ccc;
           cursor: not-allowed;
         }
@@ -309,7 +310,6 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         margin: 0 auto;
         margin-top: auto;
         max-width: 100%;
-        min-width: 60vw;
         max-height: 70vh;
         border-radius: 10px;
         border: 1px solid #ccc;
@@ -337,7 +337,7 @@ $block-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       margin: 0 auto;
       padding: 5px 20px;
       text-align: center;
-      font-size: 40px;
+      font-size: 32px;
       font-weight: bold;
     }
     .player {
